kubernetes/namespace/infra/git/04-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: git
#  annotations:
#    ingress.kubernetes.io/ssl-redirect: "true"
#    ingress.kubernetes.io/proxy-body-size: "0"
#    kubernetes.io/ingress.class: "traefik"
#    traefik.ingress.kubernetes.io/router.tls: "true"
#    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: git.drm.lab.emc.com
      http:
        paths:
          - path: /
            backend:
              serviceName: gitea
              servicePort: 80
#  tls:
#    - hosts:
#      - git.datadomain.com
#      secretName: gitea-cert
