kubernetes/namespace/infra/git/ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: git
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: git.datadomain.com
      http:
        paths:
          - path: /
            backend:
              serviceName: gitea
              servicePort: 443
  tls:
    - hosts:
      - git.datadomain.com
      secretName: gitea-cert
